--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,73 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/@govtechsg/sgds-web-component@1.0.2/components/Masthead/index.umd.js"
+    ></script>
+    <title>GovGuide</title>
   </head>
   <body>
+    <sgds-masthead fluid></sgds-masthead>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <footer class="sgds footer">
+      <section class="footer-top">
+          <div class="container-fluid">
+              <div class="row footer-header">
+                  <div class="col col-lg-6 col-md-12">
+                      <div class="title">GovGuide</div>
+                      <div class="description">
+                          GOVGUIDE DESCRIPTION HERE
+                      </div>
+                  </div>
+              </div>
+              <div class="row footer-items">
+                  <div class="col-xxl-2 col-md-4 mb-3">
+                      <ul class="links">
+                          <li><a href="">Home</a></li>
+                          <li><a href="">Generate</a></li>
+                      </ul>
+                    </div>
+              </div>
+              <div class="row footer-contact-links">
+                  <div class="col">
+                      <div class="d-flex justify-content-lg-end">
+                          <ul>
+                              <li><a href="">Contact</a></li>
+                              <li><a href="">Feedback</a></li>
+                              <li><a href="https://www.reach.gov.sg/" target="_blank"
+                                      rel="noopener noreferrer">Reach.gov.sg</a></li>
+                          </ul>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+      <section class="footer-bottom">
+          <div class="container-fluid">
+              <div class="row footer-mandatory-links">
+                  <div class="col">
+                      <ul>
+                          <li><a href="https://tech.gov.sg/report_vulnerability" target="_blank"
+                                  rel="noopener noreferrer">Report Vulnerability</a></li>
+                          <li><a href="">Privacy Statement</a></li>
+                          <li><a href="">Terms of use</a></li>
+                      </ul>
+                  </div>
+              </div>
+              <div class="row footer-copyrights">
+                  <div class="col">
+                      <div class="d-flex justify-content-lg-end text-end">
+                          © 2024 Government of Singapore<br>
+                          Last Updated 06 April 2024
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+  </footer>
   </body>
 </html>
