descriptions in prompt page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
                   <div class="col col-lg-6 col-md-12">
                       <div class="title">GovGuide</div>
                       <div class="description">
-                          GOVGUIDE DESCRIPTION HERE
+                          GovGuide is a one-stop guide to government services and information, presented in a user-friendly and intuitive way.
                       </div>
                   </div>
               </div>
