Fix Nav Bug and Added GovGuide Logo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
       src="https://cdn.jsdelivr.net/npm/@govtechsg/sgds-web-component@1.0.2/components/Masthead/index.umd.js"
     ></script>
     <title>GovGuide</title>
+    <link rel="shortcut icon" href="/GovGuideIcon.png"/>
   </head>
   <body>
     <sgds-masthead fluid></sgds-masthead>
